# netwall-flow-analyzer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/aggregation/: flows.py
backend/app/api/: device_resolve.py  routes_firewalls.py  routes_graph.py  routes_ingest.py  routes_inventory.py  routes_maintenance.py  routes_rules.py  routes_settings.py  routes_zones.py
backend/app/enrichment/: classification.py
backend/app/ingest/: job_processor.py  reconstruct.py  stats.py  syslog_udp.py  worker.py
backend/app/storage/: db.py  endpoint_lookup.py  event_writer.py  firewall_source.py  flow_index.py  ha_canonical.py  models.py  retry.py  settings.py  upsert.py  writer.py
backend/migrations/: add_firewall_overrides.sql  add_firewalls_inventory.sql
backend/scripts/: dedup_flows_and_add_unique_index.py
backend/tests/: __init__.py  test_api_devices.py  test_flows_upsert.py  test_ingest_batch_no_flush_in_flush.py  test_ingest_incontrol.py  test_list_known_endpoints_query.py  test_unclassified_endpoints_upsert.py
docker/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: AnalysisPanelDrawer.tsx  index.css  main.tsx
