[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netwall-flow-analyzer-backend"
version = "0.1.0"
description = "NetWall CONN Flow Analyzer backend (FastAPI + UDP syslog + PostgreSQL)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "httpx>=0.27.0"]
lint = ["ruff>=0.8.0"]

[project.scripts]
netwall-flow-analyzer = "app.main:cli"

